[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/Anniversary.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/back.png" type="Texture" id=2]
[ext_resource path="res://scripts/Credits.gd" type="Script" id=3]
[ext_resource path="res://scripts/background3.gd" type="Script" id=4]
[ext_resource path="res://assets/obstacle.png" type="Texture" id=5]
[ext_resource path="res://assets/ground.png" type="Texture" id=6]
[ext_resource path="res://assets/jump.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/swimmer.png" type="Texture" id=8]
[ext_resource path="res://scripts/playerai3.gd" type="Script" id=10]
[ext_resource path="res://assets/dive.wav" type="AudioStream" id=11]
[ext_resource path="res://assets/water.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 680.801, 69.22 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 119.397, 119.959 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 255.19, 45 )

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
extra_spacing_bottom = 20
font_data = ExtResource( 1 )

[node name="Credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="ground" type="StaticBody2D" parent="background"]
position = Vector2( 0, 4180.15 )
scale = Vector2( 5, 50 )
z_index = 15
collision_layer = 4
collision_mask = 5

[node name="ground" type="Sprite" parent="background/ground"]
scale = Vector2( 5.64315, 0.576693 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="background/ground"]
position = Vector2( 0, 0.017 )
shape = SubResource( 9 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="background/ground"]
position = Vector2( 5.2, -152.823 )
shape = SubResource( 9 )

[node name="ceiling" type="Sprite" parent="background/ground"]
position = Vector2( 94, -203.603 )
scale = Vector2( 8.34417, 1 )
texture = ExtResource( 6 )

[node name="ceiling_pos" type="Position2D" parent="background/ground/ceiling"]
position = Vector2( -6.136, 120 )

[node name="obstacle2" type="Sprite" parent="background"]
modulate = Color( 0.721569, 0.172549, 0.172549, 1 )
position = Vector2( -7409, -709 )
scale = Vector2( 20.0639, 1.19381 )
z_index = -4
texture = ExtResource( 5 )

[node name="sounds2" type="Node" parent="background"]

[node name="dive" type="AudioStreamPlayer" parent="background/sounds2"]
stream = ExtResource( 11 )

[node name="jump" type="AudioStreamPlayer" parent="background/sounds2"]
stream = ExtResource( 7 )

[node name="Player" type="KinematicBody2D" parent="background"]
position = Vector2( 152.962, 400 )
scale = Vector2( 0.2, 0.2 )
collision_layer = 0
collision_mask = 2147483649
script = ExtResource( 10 )

[node name="sprite" type="Sprite" parent="background/Player"]
texture = ExtResource( 8 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="background/Player"]
shape = SubResource( 10 )

[node name="water" type="Sprite" parent="background"]
modulate = Color( 1, 1, 1, 0.388235 )
position = Vector2( -947, 1239 )
scale = Vector2( 35.9389, 14.3044 )
texture = ExtResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="middle" type="Area2D" parent="background"]
position = Vector2( 152.962, 400 )
scale = Vector2( 0.2, 0.2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="background/middle"]
position = Vector2( 2050.19, 4.99988 )
shape = SubResource( 11 )

[node name="top" type="Area2D" parent="background"]
position = Vector2( 152.962, 400 )
scale = Vector2( 0.2, 0.2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="background/top"]
position = Vector2( 2535.19, -1035 )
shape = SubResource( 11 )

[node name="bottom" type="Area2D" parent="background"]
position = Vector2( 152.962, 400 )
scale = Vector2( 0.2, 0.2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="background/bottom"]
position = Vector2( 2265.19, 925 )
shape = SubResource( 11 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1180.0
margin_bottom = 620.0

[node name="Upper" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1180.0
margin_bottom = 130.0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="MarginContainer/VBoxContainer/Upper"]
margin_right = 130.0
margin_bottom = 130.0
rect_min_size = Vector2( 130, 130 )
shortcut_in_tooltip = false
action_mode = 0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="HSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/Upper"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 134.0
margin_right = 184.0
margin_bottom = 130.0
rect_min_size = Vector2( 50, 0 )

[node name="Settings" type="Label" parent="MarginContainer/VBoxContainer/Upper"]
margin_left = 188.0
margin_top = 1.0
margin_right = 668.0
margin_bottom = 129.0
custom_fonts/font = SubResource( 1 )
text = "credits"
valign = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 134.0
margin_right = 1180.0
margin_bottom = 204.0
rect_min_size = Vector2( 0, 70 )

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 1180.0
margin_bottom = 579.0
custom_fonts/normal_font = SubResource( 2 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
fit_content_height = true
[connection signal="area_entered" from="background/middle" to="background/Player" method="_on_middle_area_entered"]
[connection signal="area_entered" from="background/top" to="background/Player" method="_on_top_area_entered"]
[connection signal="area_entered" from="background/bottom" to="background/Player" method="_on_bottom_area_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Upper/Exit" to="." method="_on_Exit_pressed"]
